--- a/Final_AED_Project/src/UserInterface/SystemAdmin/SystemAdminHospitalPortalJPanel.form
+++ b/Final_AED_Project/src/UserInterface/SystemAdmin/SystemAdminHospitalPortalJPanel.form
@@ -119,7 +119,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="10" y="10" width="80" height="-1"/>
+          <AbsoluteConstraints x="20" y="20" width="80" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -217,7 +217,7 @@
           <Color blue="d3" green="c2" red="8a" type="rgb"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/ui/Picture/cover1.jpeg"/>
+          <Image iconType="3" name="/ui/Picture/hospital.jpg"/>
         </Property>
       </Properties>
       <Constraints>
