--- a/Final_AED_Project/src/UserInterface/SystemAdmin/SystemAdminLabJPanel.form
+++ b/Final_AED_Project/src/UserInterface/SystemAdmin/SystemAdminLabJPanel.form
@@ -213,7 +213,7 @@
           <Color blue="d3" green="c2" red="8a" type="rgb"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/ui/Picture/cover1.jpeg"/>
+          <Image iconType="3" name="/UserInterface/SystemAdmin/labs.jpg"/>
         </Property>
       </Properties>
       <Constraints>
